align nav trigger / resolve tech click bug

--- a/web/src/scss/components/nav.scss
+++ b/web/src/scss/components/nav.scss
@@ -355,7 +355,7 @@
   height: fluid(32, $sm);
 
   right: fluid(20, $sm);
-  top: fluid(15, $sm);
+  top: fluid(20, $sm);
 
   &::before,
   &::after {
